applications/internship-website/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/permanent-redirect: https://www.mindspore.cn/internship
  name: internship-ingress
  namespace: internship
spec:
  tls:
    - hosts:
        - internship.mindspore.cn
      secretName: internship-tls
  rules:
    - host: internship.mindspore.cn

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-snippet: |
      rewrite ^/zh/internship/         https://www.mindspore.cn/internship           redirect;
      rewrite ^/zh/calendar/           https://www.mindspore.cn/calendar             redirect;
      rewrite ^/zh/summit/summit2023/  https://www.mindspore.cn/summit/summit2023    redirect;
      rewrite ^/                       https://www.mindspore.cn/                     redirect;
  name: new-internship-ingress
  namespace: internship
spec:
  tls:
    - hosts:
        - new.mindspore.cn
      secretName: internship-tls
  rules:
    - host: new.mindspore.cn
